cleanup, user page, details, modals